--- a/package.json
+++ b/package.json
@@ -11,10 +11,19 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "lint-staged",
+    "eslint":	"node_modules/.bin/eslint src/"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "lint-staged":{
+    "*.{js, jsx}":	[
+      "node_modules/.bin/eslint --max-warnings=0",
+      "prettier --write",
+      "git add"
+    ]
   },
   "browserslist": [
     ">0.2%",
